[tool.poetry]
name = "goit-web-homework-8"
version = "0.1.0"
description = ""
authors = ["Yuliia Didenko <yu_lyan@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
